Ensure line numbers are visible

--- a/styles/go-plus-test.atom-text-editor.less
+++ b/styles/go-plus-test.atom-text-editor.less
@@ -11,9 +11,11 @@
 }
 
 .line-number.uncovered{
+  color: @text-color-selected !important;
   background-color: @background-color-error;
 }
 
 .line-number.covered{
+  color: @text-color-selected !important;
   background-color: @background-color-success;
 }
